<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnHome1"
        android:layout_width="236dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corners"
        android:onClick="clickHome1"
        android:text="@string/btnHome1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHome2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHome2" />

    <Button
        android:id="@+id/btnHome2"
        android:layout_width="239dp"
        android:layout_height="0dp"
        android:layout_marginBottom="244dp"
        android:background="@drawable/rounded_corners"
        android:onClick="clickHome2"
        android:text="@string/btnHome2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHome1" />

    <TextView
        android:id="@+id/textHome"
        android:layout_width="84dp"
        android:layout_height="0dp"
        android:layout_marginTop="161dp"
        android:layout_marginBottom="10dp"
        android:text="@string/textHome"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textHome2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="71dp"
        android:text="@string/textHome2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHome1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHome" />
</androidx.constraintlayout.widget.ConstraintLayout>